# AntMAN

./: .Rbuildignore  .gitignore  .travis.yml  AM_test.R  CMakeLists.txt  DESCRIPTION  Dockerfile  Dockerfile-old  Dockerfile.3.4.4  Makefile  NAMESPACE  README.md  new_tutorial.R  unused.R
.github/workflows/: main.yml
AntMAN/: DESCRIPTION  NAMESPACE  cran-comments.md  new_tutorial.R
AntMAN/R/: AM_binder.R  AM_clustering.R  AM_coclustering.R  AM_demo.R  AM_emp_bayes.R  AM_extract.R  AM_find_gamma.R  AM_mcmc.R  AM_mix_components_prior.R  AM_mix_hyperparams.R  AM_mix_weights_prior.R  AM_plot.R  AM_prior.R  AM_sample.R  AntMANDatasets.R  AntMANPackage.R  AntManAPI.R  INTERNAL_functions_antman_uninorm.R  INTERNAL_utilities.R  RcppExports.R  functions_antman_uninorm.R  salso.R  sampling_helpers.R  utilities.R
AntMAN/data/: brain.rda  carcinoma.rda  said.rda
AntMAN/inst/: CITATION  REFERENCES.bib
AntMAN/man/: AM_VnkDelta.Rd  AM_VnkNegBin.Rd  AM_VnkPoisson.Rd  AM_binder.Rd  AM_calcola_stirling_ricor_abs.Rd  AM_clustering_estimation_average.Rd  AM_clustering_estimation_laugreen.Rd  AM_clustering_estimation_squared_loss.Rd  AM_coclustering.Rd  AM_coclustering_slow.Rd  AM_compute_stirling_ricor_abs.Rd  AM_compute_stirling_ricor_log.Rd  AM_demo_mvb_poi.Rd  AM_demo_mvn_poi.Rd  AM_demo_uvn_poi.Rd  AM_emp_bayes_uninorm.Rd  AM_extract.Rd  AM_find_gamma_Delta.Rd  AM_find_gamma_NegBin.Rd  AM_find_gamma_Pois.Rd  AM_mcmc_configuration.Rd  AM_mcmc_fit.Rd  AM_mcmc_neff.Rd  AM_mcmc_output.Rd  AM_mcmc_parameters.Rd  AM_mcmc_refit.Rd  AM_mix_components_prior.Rd  AM_mix_components_prior_dirac.Rd  AM_mix_components_prior_negbin.Rd  AM_mix_components_prior_pois.Rd  AM_mix_hyperparams.Rd  AM_mix_hyperparams_multiber.Rd  AM_mix_hyperparams_multinorm.Rd  AM_mix_hyperparams_unibin.Rd  AM_mix_hyperparams_uninorm.Rd  AM_mix_hyperparams_unipois.Rd  AM_mix_weights_prior.Rd  AM_mix_weights_prior_gamma.Rd  AM_multiber_mix_hyperparams.Rd  AM_multinorm_mix_hyperparams.Rd  (+41 more)
AntMAN/src/: AM_tests.cpp  AntMANLogger.h  AntMan.cpp  GibbsResult.cpp  GibbsResult.h  GibbsResult.hpp  GibbsResultRCpp.cpp  GibbsResultRCpp.h  GibbsResultRCpp.hpp  GibbsResultsToFile.cpp  Mixture.h  Mixture.hpp  MixtureMultiVariateNormal.h  MixtureMultiVariateNormal.hpp  MixtureMultivariateBernoulli.hpp  MixtureMultivariateBinomial.h  MixtureMultivariateBinomial.hpp  MixtureUnivariateBernoulli.h  MixtureUnivariateBernoulli.hpp  MixtureUnivariateNormal.h  MixtureUnivariateNormal.hpp  MixtureUnivariatePoisson.h  MixtureUnivariatePoisson.hpp  MixtureUnivariateProbit.hpp  Mixtures.h  (+26 more)
R/: AntManAPI.R  sampling_helpers.R
man/: AntMan-package.Rd
src/: AntMan.cpp  FutureAntMan.cpp  GibbsResult.hpp  Mixture.hpp  MixtureMultiVariateNormal.hpp  MixtureMultivariateBernoulli.hpp  MixtureUnivariateBernoulli.hpp  MixtureUnivariateNormal.hpp  MixtureUnivariatePoisson.hpp  MixtureUnivariateProbit.hpp  Prior.hpp  PriorDirac.hpp  PriorNegativeBinomial.cpp  PriorNegativeBinomial.hpp  PriorPoisson.cpp  PriorPoisson.hpp  RcppExports.cpp  symbols.rds  utils.hpp
tests/: testconfigs.R
tests_cpp/: AM_test_mixtures.cpp  AM_test_mixtures.h  AM_test_priors.cpp  AM_test_priors.h  AM_tests.cpp  BasicTest.cpp  CMakeLists.txt  MVNBugTest.cpp  Makefile  MultivariateBinomialTest.cpp  MultivariateNormalTest.cpp  UnivariateNormalTest.cpp  UnivariatePoissonTest.cpp  data.csv  test_mixtures.cpp  testutils.cpp  testutils.h
(+33 files in other folders)
